--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -62,5 +62,5 @@ jobs:
           --deployment-config-name CodeDeployDefault.AllAtOnce \
           --deployment-group-name gc-cicd \
           --file-exists-behavior OVERWRITE \
-          --s3-location bucket=project-bucket-v1,bundleType=zip,key=cicdtest/$GITHUB_SHA.zip \
+          --s3-location bucket=${{ secrets.AWS_S3_BUCKET }},bundleType=zip,key=streaming/$GITHUB_SHA.zip \
           --region ap-northeast-2 \
