--- a/appspec.yml
+++ b/appspec.yml
@@ -4,11 +4,11 @@ os: linux
 # 배포할 파일 및 디렉토리 정의
 files:
   - source: /
-    destination: /home/ubuntu/moduform
+    destination: /home/ubuntu/streaming
 
 # 애플리케이션 소유 원한 정의
 permissions:
-  - object: /home/ubuntu/moduform/
+  - object: /home/ubuntu/steaming/
     owner: ubuntu
     group: ubuntu
 
