:wrench: Chore: CICD file 수정 및 환경 변경
- CI job 분리 및 caching 추가
- CD job 분리
- deploy.sh: 타겟 파일 path 변경
- application-dev.yml: 개발 서버 환경 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
   profiles:
     group:
       "local": "local, datasource, docs, S3" # 로컬 환경 프로파일
+      "dev": "dev, datasource, docs, S3" # 개발 환경 프로파일
+
+    active: local # 로컬 환경 프로파일을 기본으로 설정
