--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    name: CI
+    name: CI-CD
     runs-on: ubuntu-latest
     steps:
       - name: Checkout java with gradle
@@ -45,11 +45,6 @@ jobs:
       - name: Build and Test
         run: ./gradlew build -x test
 
-  deploy:
-    name: CD
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Make Zip File
         run: zip -qq -r ./$GITHUB_SHA.zip .
         shell: bash
