--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
       "local": "local, datasource, docs, S3" # 로컬 환경 프로파일
       "dev": "dev, datasource, docs, S3" # 개발 환경 프로파일
 
-    active: local # 로컬 환경 프로파일을 기본으로 설정
+    active: dev # 로컬 환경 프로파일을 기본으로 설정
