--- a/src/main/resources/application-s3.yml
+++ b/src/main/resources/application-s3.yml
@@ -13,5 +13,5 @@ cloud:
     s3:
       bucket: ${AWS_S3_BUCKET}
     credentials:
-      accessKey: ${AWS_S3_ACCESS_KEY}
-      secretKey: ${AWS_S3_SECRET_KEY}
+      access-key: ${AWS_S3_ACCESS_KEY}
+      secret-key: ${AWS_S3_SECRET_KEY}
