--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: ${APPLICATION_PORT:8080}
 
 spring:
+  config:
+    import: application-s3.yml
+
   application:
     name: Streaming Service
 
