--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 
     // aws
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation platform('software.amazon.awssdk:bom:2.17.53')
     implementation 'software.amazon.awssdk:s3'
 }
