--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -2,7 +2,11 @@
 spring:
   config:
     activate:
-      on-profile: "S3"
+      on-profile: "aws"
+  servlet:
+    multipart:
+      max-file-size: 5GB
+      max-request-size: 5GB
 
 cloud:
   aws:
@@ -15,3 +19,10 @@ cloud:
     credentials:
       access-key: ${AWS_S3_ACCESS_KEY}
       secret-key: ${AWS_S3_SECRET_KEY}
+
+logging:
+  level:
+    com:
+      amazonaws:
+        util:
+          EC2MetadataUtils: error
