--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,11 @@ server:
   port: ${APPLICATION_PORT:8080}
 
 spring:
-  config:
-    import: application-s3.yml
-
   application:
     name: Streaming Service
-
   profiles:
     group:
-      "local": "local, datasource, docs, S3" # 로컬 환경 프로파일
-      "dev": "dev, datasource, docs, S3" # 개발 환경 프로파일
+      "local": "local, datasource, docs, aws" # 로컬 환경 프로파일
+      "dev": "dev, datasource, docs, aws" # 개발 환경 프로파일
 
     active: dev # 로컬 환경 프로파일을 기본으로 설정
